add confirm element

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
               <img src="./img/card-logo.svg" alt="Card Logo" />
             </div>
             <div id="card-info">
-              <span id="card-number">xxxx xxxx xxxx xxxx</span>
+              <span id="card-number">0000 0000 0000 0000</span>
               <div>
-                <span id="cardholder">Josemar OA</span>
+                <span id="cardholder">Cardholder name</span>
                 <span>
-                  <span id="card-exp-month">mm</span>/<span id="card-exp-year"
-                    >yy</span
+                  <span id="card-exp-month">00</span>/<span id="card-exp-year"
+                    >00</span
                   >
                 </span>
               </div>
             </div>
           </div>
           <div id="card-back">
-            <span id="card-cvc">000</span>
+            <span id="card-cvc">000 | 0000</span>
           </div>
         </div>
       </div>
@@ -109,6 +109,13 @@
 
           <button type="submit" id="btnConfirm">Confirm</button>
         </form>
+        <!-- Successful Container -->
+        <div class="hide" id="submited-success-container">
+          <img src="./img/icon-complete.svg" alt="Icon Complete" />
+          <span>Thank you!</span>
+          <p>We've added your card details</p>
+          <button id="btnContinue">Continue</button>
+        </div>
       </div>
     </main>
   </body>
